// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangeDatesBookingDrawer /> should render an error message whenever the check-in and check-out are not changed on submit 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: hidden;"
  >
    <div>
      <div
        class="sc-idOjMB kWZquY"
      />
      <div
        class="sc-cxFKTC hsKcGb"
        data-testid="base-drawer"
      >
        <button
          class="sc-dmlpXa gYemGx"
          data-testid="close-button"
        >
          X
        </button>
        <form
          class="sc-crrtmM XATYL"
          data-testid="change-dates-form"
        >
          <h3
            class="sc-dQpIV fPWcU"
          >
            Choose the new dates
          </h3>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check in
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-in"
              max="2023-12-25"
              min="2023-12-31"
              name="checkIn"
              type="date"
              value="2023-12-19"
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check out
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-out"
              min="2023-12-20"
              name="checkOut"
              type="date"
              value="2023-12-26"
            />
          </div>
          <button
            class="sc-jrAGKZ kaeceu"
            data-testid="update-booking"
          >
            Update Booking
          </button>
          <span
            class="sc-iwyWfK boXWZb"
            data-testid="error-msg"
          >
            You didn´t change the check-in and check-out dates. Please select at least one new date
          </span>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-idOjMB kWZquY"
    />
    <div
      class="sc-cxFKTC hsKcGb"
      data-testid="base-drawer"
    >
      <button
        class="sc-dmlpXa gYemGx"
        data-testid="close-button"
      >
        X
      </button>
      <form
        class="sc-crrtmM XATYL"
        data-testid="change-dates-form"
      >
        <h3
          class="sc-dQpIV fPWcU"
        >
          Choose the new dates
        </h3>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="2023-12-25"
            min="2023-12-31"
            name="checkIn"
            type="date"
            value="2023-12-19"
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-20"
            name="checkOut"
            type="date"
            value="2023-12-26"
          />
        </div>
        <button
          class="sc-jrAGKZ kaeceu"
          data-testid="update-booking"
        >
          Update Booking
        </button>
        <span
          class="sc-iwyWfK boXWZb"
          data-testid="error-msg"
        >
          You didn´t change the check-in and check-out dates. Please select at least one new date
        </span>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ChangeDatesBookingDrawer /> should render an error message whenever there are dates overlapping on submit 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: hidden;"
  >
    <div>
      <div
        class="sc-idOjMB kWZquY"
      />
      <div
        class="sc-cxFKTC hsKcGb"
        data-testid="base-drawer"
      >
        <button
          class="sc-dmlpXa gYemGx"
          data-testid="close-button"
        >
          X
        </button>
        <form
          class="sc-crrtmM XATYL"
          data-testid="change-dates-form"
        >
          <h3
            class="sc-dQpIV fPWcU"
          >
            Choose the new dates
          </h3>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check in
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-in"
              max="2023-12-25"
              min="2023-12-31"
              name="checkIn"
              type="date"
              value="2023-12-19"
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check out
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-out"
              min="2023-12-20"
              name="checkOut"
              type="date"
              value="2023-12-26"
            />
          </div>
          <button
            class="sc-jrAGKZ kaeceu"
            data-testid="update-booking"
          >
            Update Booking
          </button>
          <span
            class="sc-iwyWfK boXWZb"
            data-testid="error-msg"
          >
            The bedroom has already been booked for the chosen period. Please choose new dates
          </span>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-idOjMB kWZquY"
    />
    <div
      class="sc-cxFKTC hsKcGb"
      data-testid="base-drawer"
    >
      <button
        class="sc-dmlpXa gYemGx"
        data-testid="close-button"
      >
        X
      </button>
      <form
        class="sc-crrtmM XATYL"
        data-testid="change-dates-form"
      >
        <h3
          class="sc-dQpIV fPWcU"
        >
          Choose the new dates
        </h3>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="2023-12-25"
            min="2023-12-31"
            name="checkIn"
            type="date"
            value="2023-12-19"
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-20"
            name="checkOut"
            type="date"
            value="2023-12-26"
          />
        </div>
        <button
          class="sc-jrAGKZ kaeceu"
          data-testid="update-booking"
        >
          Update Booking
        </button>
        <span
          class="sc-iwyWfK boXWZb"
          data-testid="error-msg"
        >
          The bedroom has already been booked for the chosen period. Please choose new dates
        </span>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ChangeDatesBookingDrawer /> should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: hidden;"
  >
    <div>
      <div
        class="sc-idOjMB kWZquY"
      />
      <div
        class="sc-cxFKTC hsKcGb"
        data-testid="base-drawer"
      >
        <button
          class="sc-dmlpXa gYemGx"
          data-testid="close-button"
        >
          X
        </button>
        <form
          class="sc-crrtmM XATYL"
          data-testid="change-dates-form"
        >
          <h3
            class="sc-dQpIV fPWcU"
          >
            Choose the new dates
          </h3>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check in
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-in"
              max="2023-12-25"
              min="2023-12-31"
              name="checkIn"
              type="date"
              value="2023-12-19"
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check out
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-out"
              min="2023-12-20"
              name="checkOut"
              type="date"
              value="2023-12-26"
            />
          </div>
          <button
            class="sc-jrAGKZ kaeceu"
            data-testid="update-booking"
          >
            Update Booking
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-idOjMB kWZquY"
    />
    <div
      class="sc-cxFKTC hsKcGb"
      data-testid="base-drawer"
    >
      <button
        class="sc-dmlpXa gYemGx"
        data-testid="close-button"
      >
        X
      </button>
      <form
        class="sc-crrtmM XATYL"
        data-testid="change-dates-form"
      >
        <h3
          class="sc-dQpIV fPWcU"
        >
          Choose the new dates
        </h3>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="2023-12-25"
            min="2023-12-31"
            name="checkIn"
            type="date"
            value="2023-12-19"
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-20"
            name="checkOut"
            type="date"
            value="2023-12-26"
          />
        </div>
        <button
          class="sc-jrAGKZ kaeceu"
          data-testid="update-booking"
        >
          Update Booking
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
